Try to add bgColor and initials -> new Bug/feature

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -9,47 +9,87 @@
       <div class="content">
         <div class="title_field">
           <label class="title" name="title">Title<span>*</span></label>
-          <input class="input" type="text" name="input" placeholder="Enter a title" required />
+          <input
+            class="input"
+            type="text"
+            name="input"
+            placeholder="Enter a title"
+            required
+          />
         </div>
 
         <div class="description_field">
           <label class="description" name="description">Description</label>
-          <textarea class="input" type="text" name="input" placeholder="Enter a Description"></textarea>
+          <textarea
+            class="input"
+            type="text"
+            name="input"
+            placeholder="Enter a Description"
+          ></textarea>
         </div>
 
         <div class="assigned_field">
           <div class="assigned_field_headline" (click)="isSelectList()">
             <p>Select contacts to assign</p>
-            <img class="arrow_drop_down" src="assets/img/icons/arrow_drop_down_icon.svg" [ngStyle]="{ display: selectList ? 'block' : 'none' }"/>
-            <img class="arrow_drop_up" src="assets/img/icons/arrow_drop_up_icon.svg" [ngStyle]="{ display: selectList ? 'none' : 'block' }"/>
+            <img
+              class="arrow_drop_down"
+              src="assets/img/icons/arrow_drop_down_icon.svg"
+              [ngStyle]="{ display: selectList ? 'block' : 'none' }"
+            />
+            <img
+              class="arrow_drop_up"
+              src="assets/img/icons/arrow_drop_up_icon.svg"
+              [ngStyle]="{ display: selectList ? 'none' : 'block' }"
+            />
           </div>
-          <div class="contact_list" [ngStyle]="{ display: selectList ? 'block' : 'none' }">
+          <div
+            class="contact_list"
+            [ngStyle]="{ display: selectList ? 'block' : 'none' }"
+          >
             <div class="assigned_field_contact_list">
-              @for (group of contactService.getGroupedContacts() | keyvalue; track $index) {
-              @for (contact of group.value; track $index) {
-              <div class="assigned_field_single_contact" [class.selected]="isSelected(contact)"
-                (click)="toggleContactSelection(contact)">
-                <div class="profile_badge" [ngStyle]="{
-                                    'background-color': contactService.getBadgeColor(
-                                      getIndexInFullList(contact)
-                                    )
-                                  }">
+              @for (group of contactService.getGroupedContacts() | keyvalue;
+              track $index) { @for (contact of group.value; track $index) {
+              <div
+                class="assigned_field_single_contact"
+                [class.selected]="isSelected(contact)"
+                (click)="toggleContactSelection(contact)"
+              >
+                <div
+                  class="profile_badge"
+                  [ngStyle]="{
+                    'background-color': contactService.getBadgeColor(
+                      getIndexInFullList(contact)
+                    )
+                  }"
+                >
                   {{ contact.initials }}
                 </div>
                 <p>{{ contact.name }}</p>
-                <img class="check_button" src="assets/img/icons/check_button_icon.svg">
-                <img class="check_button_white" src="assets/img/icons/check_button_icon_white.svg">
+                <img
+                  class="check_button"
+                  src="assets/img/icons/check_button_icon.svg"
+                />
+                <img
+                  class="check_button_white"
+                  src="assets/img/icons/check_button_icon_white.svg"
+                />
               </div>
               } }
             </div>
-          </div>         
-          <div class="contact_badge_line" [ngStyle]="{ display: selectList ? 'none' : 'flex' }">
+          </div>
+          <div
+            class="contact_badge_line"
+            [ngStyle]="{ display: selectList ? 'none' : 'flex' }"
+          >
             @for (contact of selectedContacts; track $index) {
-            <div class="profile_badge" [ngStyle]="{
+            <div
+              class="profile_badge"
+              [ngStyle]="{
                 'background-color': contactService.getBadgeColor(
                   getIndexInFullList(contact)
                 )
-              }">
+              }"
+            >
               {{ contact.initials }}
             </div>
             }
@@ -68,37 +108,78 @@
         <div class="choice">
           <label>Prio</label>
           <div class="btn-section">
-            <button class="btn-prio" type="button" (click)="setPriority('high')" [class.selectedHigh]="prio === 'high'">
+            <button
+              class="btn-prio"
+              type="button"
+              (click)="setPriority('high')"
+              [class.selectedHigh]="prio === 'high'"
+            >
               Urgent
               <div class="arrow-up"></div>
             </button>
 
-            <button class="btn-prio" type="button" (click)="setPriority('medium')"
-              [class.selectedMedium]="prio === 'medium'">
+            <button
+              class="btn-prio"
+              type="button"
+              (click)="setPriority('medium')"
+              [class.selectedMedium]="prio === 'medium'"
+            >
               Medium
               <div class="equal"></div>
             </button>
-            <button class="btn-prio" type="button" (click)="setPriority('low')" [class.selectedLow]="prio === 'low'">
+            <button
+              class="btn-prio"
+              type="button"
+              (click)="setPriority('low')"
+              [class.selectedLow]="prio === 'low'"
+            >
               Low
               <div class="arrow-down"></div>
             </button>
           </div>
         </div>
 
-        <div class="choice">
+        <!-- <div class="choice">
           <label for="taskType">Category<span>*</span></label>
           <select id="taskType" name="taskType">
             <option value="userStory">User Story</option>
             <option value="technicalTask">Technical Task</option>
           </select>
+        </div> -->
+
+        <div class="choice">
+          <label for="taskType">Category<span>*</span></label>
+          <div class="seemInput" (click)="clickCategory()">
+            <p>Select task category</p>            
+            <img
+              class="arrow_drop_down"
+              src="assets/img/icons/arrow_drop_down_icon.svg"              
+              [ngStyle]="{ display: openCategory ? 'none' : 'block' }"
+            />
+            <img
+              class="arrow_drop_up"
+              src="assets/img/icons/arrow_drop_up_icon.svg"
+              [ngStyle]="{ display: openCategory ? 'block' : 'none' }"              
+            />
+          </div>
+          <div class="" [ngStyle]="{ display: openCategory ? 'block' : 'none' }">
+            <p>Technical Task</p>  
+            <p>User Story</p>          
+          </div>         
         </div>
 
         <div class="choice">
           <label for="subtasks">Subtasks</label>
           <div class="input-container">
-            <input type="text" id="subtasks" name="subtasks" [(ngModel)]="newSubtask"
-              [ngModelOptions]="{ standalone: true }" [placeholder]="isEditing ? '' : 'Add new subtask'"
-              (focus)="startEditing()" />
+            <input
+              type="text"
+              id="subtasks"
+              name="subtasks"
+              [(ngModel)]="newSubtask"
+              [ngModelOptions]="{ standalone: true }"
+              [placeholder]="isEditing ? '' : 'Add new subtask'"
+              (focus)="startEditing()"
+            />
 
             <div class="button-group">
               @if(!isEditing){
@@ -109,11 +190,13 @@
                   alt="Ok hook Image"
                 />
               </button>
-              } 
-
-              @if(isEditing){
+              } @if(isEditing){
               <button class="btn-subtask" (click)="cancelEditing()">
-                <img class="close_subtask" src="assets/img/icons/close.svg" alt="Closing Image" />
+                <img
+                  class="close_subtask"
+                  src="assets/img/icons/close.svg"
+                  alt="Closing Image"
+                />
               </button>
               <span>|</span>
               <button class="btn-subtask" (click)="addSubtask()">
@@ -131,7 +214,11 @@
             <li (dblclick)="editSubtask($index)">
               <div class="li-container">
                 @if(task.isEditing){
-                <input [(ngModel)]="task.text" [ngModelOptions]="{ standalone: true }" class="edit-input" />
+                <input
+                  [(ngModel)]="task.text"
+                  [ngModelOptions]="{ standalone: true }"
+                  class="edit-input"
+                />
                 <div class="actions">
                   <button class="btn-subtask" (click)="deleteSubtask($index)">
                     <img
