--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -26,7 +26,7 @@
     padding: 32px;
     border-radius: 24px;
     width: 500px;
-    height: 800px;
+    // height: 800px;
 
     @media (max-width: 580px) {
       width: 85%;
@@ -65,6 +65,14 @@
           background: $mid_gray;
         }
       }
+    }
+
+    .value-date {
+      padding-left: 30px;
+    }
+
+    .value-priority {
+      padding-left: 41px;
     }
 
     .label {
