--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -75,6 +75,12 @@
       padding-left: 41px;
     }
 
+    .taskcard_priority .priority-icon {
+      width: 17px;
+      height: 12px;
+    }
+    
+
     .label {
       color: $black;
     }
