--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -2,6 +2,9 @@
   <div class="board_header">
     <div class="board_header_left">
       <h1>Board</h1>
+      <div class="mobile_add_task_btn">
+        <img src="./../../../../assets/img/icons/plus_icon.svg" alt="" />
+      </div>
     </div>
     <div class="board_header_right">
       <div class="input_field">
