mobile-board style adjustments

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -3,17 +3,17 @@
     <div class="board_header_left">
       <h1>Board</h1>
       <div class="mobile_add_task_btn">
-        <img src="./../../../../assets/img/icons/plus_icon.svg" alt="" />
+        <img src="assets/img/icons/plus_icon.svg" alt="" />
       </div>
     </div>
     <div class="board_header_right">
       <div class="input_field">
         <input type="text" placeholder="Find task" />
-        <img src="./assets/img/icons/search_icon.svg" alt="" />
+        <img src="assets/img/icons/search_icon.svg" alt="" />
       </div>
       <button class="add_task_btn">
         Add task
-        <img src="./../../../../assets/img/icons/plus_icon.svg" alt="" />
+        <img src="assets/img/icons/plus_icon.svg" alt="" />
       </button>
     </div>
   </div>
