--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -8,7 +8,7 @@ section {
 }
 
 .input_field {
-  @include dFlex($ai: center, $jc: space-between, $g: 32px);
+  @include dFlex($ai: center, $jc: space-between, $g: 24px);
   height: 48px;
   max-width: 312px;
   border-radius: 10px;
@@ -18,6 +18,10 @@ section {
   background-color: $white;
   padding: 8px;
   cursor: pointer;
+
+  &:focus-within {
+    border-color: $light_blue;
+  }
 
   > img {
     padding-left: 16px;
@@ -31,9 +35,11 @@ section {
 input {
   height: 100%;
   width: 100%;
+  outline: none;
   border: none;
   background-color: transparent;
   cursor: pointer;
+  transform: translateY(2px);
 }
 
 input::placeholder {
@@ -62,7 +68,7 @@ input::placeholder {
   > img {
     height: 18px;
     width: 18px;
-    margin-left: 4px;
+    margin-left: 6px;
   }
 
   &:hover {
